feat: integrate Playwright for end-to-end testing and add authentication tests
- Added global setup for Playwright to manage session state.
- Configured Playwright with a custom test directory and global setup.
- Created authentication tests using Supertest for login, refresh, and session endpoints.
- Introduced Artillery for load testing with scenarios for login spikes.
- Updated TypeScript configuration for integration and load testing.
- Enhanced project structure with new directories for tests and fixtures.
- Added dotenv support for environment variables in authentication helper.
- Included README files for guidance on running tests and load scenarios.

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@playwright/test": "^1.52.0"
+    "@playwright/test": "^1.52.0",
+    "@types/node": "^22.15.17",
+    "supertest": "^7.1.1"
   }
 }
