--- a/integration/package.json
+++ b/integration/package.json
@@ -14,6 +14,8 @@
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.0",
     "typescript": "^5.8.3"
   }
 }
