feat(load): update package.json and tsconfig for TypeScript and Artillery
- Updated package.json to use TypeScript 5.x and Artillery 2.0.23.
- Changed build script to `build:hooks` for clarity.
- Added type definitions for Node.js.
- Modified tsconfig.json to include paths for shared modules and updated include patterns.

chore(load): refactor auth-load.yml for improved configuration

- Updated target URL to include CONVENTION_API.
- Changed processor path to point to the compiled JavaScript file.
- Adjusted think time in scenarios for better load testing.

chore(load): restructure project files and add README.md

- Renamed artillery.config.js to artillery.config.yml for consistency.
- Created dist directory to store compiled hooks and shared helpers.
- Added README.md files to various directories for documentation.

feat(load): add initial artillery configuration file

- Created artillery.config.yml with configuration for load testing scenarios.

chore(settings): add settings.json for YAML file association

- Added settings.json to associate .yml and .yaml files with YAML syntax highlighting.

--- a/load/package.json
+++ b/load/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "preload": "tsc -p tsconfig.json",
-    "test:load": "npm run preload && artillery run scenarios/auth-load.yml --config artillery.config.js -o reports/auth-load.json && artillery report -o reports/auth-load.html reports/auth-load.json"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
+  "scripts": {
+    "build:hooks": "tsc -p tsconfig.json",
+    "test:load": "npm run build:hooks && artillery run scenarios/auth-load.yml -o reports/auth-load.json && npx artillery report reports/auth-load.json reports/auth-load.html"
+  },
   "devDependencies": {
-    "artillery": "^2.0.21"
+    "artillery": "^2.0.23",
+    "typescript": "^5.x",
+    "@types/node": "^20.x"
   }
 }
