--- a/load/tsconfig.json
+++ b/load/tsconfig.json
@@ -1,7 +1,19 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
-        "rootDir": "../..",
-        "outDir": "dist"
+        "baseUrl": "./",
+        "paths": {
+            "@/shared/*": [
+                "../shared/*"
+            ]
+        },
+        "outDir": "dist",
+            "types": [
+                "node"
+            ]
+        },
+        "include": [
+            "**/*.ts",
+            "../shared/**/*.ts"
+        ]
     }
-}
