--- a/integration/package.json
+++ b/integration/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --forceExit",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:auth": "jest --testPathPattern=auth",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +16,11 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.3.2",
     "@types/supertest": "^6.0.3",
-    "supertest": "^7.1.0",
-    "typescript": "^5.8.3"
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3",
+    "mongoose": "^8.15.0"
   }
 }
